--- a/roles/systemdResolved/tasks/main.yaml
+++ b/roles/systemdResolved/tasks/main.yaml
@@ -3,3 +3,18 @@
     src: templates/resolved.conf.j2
     dest: /etc/systemd/resolved.conf
   notify: restart systemd-resolved
+
+- file:
+    src: /run/systemd/resolve/stub-resolv.conf
+    dest: /etc/resolv.conf
+    state: link
+  when: systemdResolvedDnsStubListener == "yes" or systemdResolvedDnsStubListener is not defined
+
+- file:
+    src: /run/systemd/resolve/resolv.conf
+    dest: /etc/resolv.conf
+    state: link
+  when: 
+    - systemdResolvedDnsStubListener is defined
+    - systemdResolvedDnsStubListener == "no"
+  notify: restart systemd-resolved
